# depu_jifen

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
backend/: config.py  database.py  main.py
backend/models/: __init__.py  player.py  room.py  transaction.py  user.py
backend/routers/: admin.py  deps.py  game.py  players.py  rooms.py  users.py
backend/schemas/: player.py  room.py  transaction.py
backend/services/: chip_service.py  game_service.py  room_service.py  ws_manager.py
backend/ws/: handler.py
deploy/: apache-vhost.conf  deploy-guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: http.ts
frontend/src/components/admin/: AdjustChipsDialog.tsx  AdminToolbar.module.css  AdminToolbar.tsx  Dashboard.module.css  DashboardDialog.tsx  PreassignDialog.tsx  SettleRoundDialog.tsx
frontend/src/components/room/: BetPanel.tsx  (+32 more)
frontend/src/contexts/: UserContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: HomePage.module.css  HomePage.tsx  RoomPage.module.css  RoomPage.tsx  WelcomePage.tsx
frontend/src/stores/: gameStore.ts
frontend/src/styles/: global.css
frontend/src/test/: GameControlButton.test.tsx  PlayerCard.test.tsx  PotDisplay.test.tsx  SettlePanel.test.tsx  WelcomePage.test.tsx  gameStore.test.ts
tests/: conftest.py  test_chip_service.py  test_edge_cases.py  test_leave_room.py  test_player_action.py  test_rounds_settle.py  test_start_hand.py  test_users_rooms.py
(+3 files in other folders)
